gccida/c3/free_basic_block_vars
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/free_basic_block_vars/src/flow.c:1250:12: error: expected expression
*( _OWORD *)&entry_exit_blocks[0].global_live_at_end = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/free_basic_block_vars/src/flow.c:1250:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&entry_exit_blocks[0].global_live_at_end = 0LL; 
   ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/free_basic_block_vars/src/obj/flow.o] Error 1
